--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "version": "1.0",
 
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
 
   "browser_action": {
@@ -19,7 +20,7 @@
   },
 
   "options_ui": {
-    "page": "options.html",
+    "page": "options/options.html",
     "chrome_style": true
   }
 }
