--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,11 @@
     "storage"
   ],
 
+  "icons": { 
+    "48": "images/icon48.png",
+    "128": "images/icon128.png" 
+  },
+
   "browser_action": {
     "default_icon": "icon.png",
     "default_title": "Fill in PR's reviewers"
