--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,7 @@
 
   "options_ui": {
     "page": "options/options.html",
-    "chrome_style": true
+    "chrome_style": true,
+    "open_in_tab": true
   }
 }
