--- a/manifest.json
+++ b/manifest.json
@@ -38,7 +38,7 @@
 
   "options_ui": {
     "page": "options/options.html",
-    "chrome_style": true
-    // "open_in_tab": true
+    "chrome_style": true,
+    "open_in_tab": true
   }
 }
